Add turn notifier

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
     </head>
     <body>
         <div id="game_view">
+            <div id="topBar">
+                <p id="topText"></p>
+            </div>
             <image id="tictactower" src="img/tictactower.png"/>
             <canvas id="overlay"></canvas>
         </div>
