Multiplayer seems to be working

--- a/public/index.html
+++ b/public/index.html
@@ -17,13 +17,14 @@
         </div>
         <div id="modal">
             <div id="message_dialog" class="hidden">
-                <p>lel</p>
+                MESSAGE GOES HERE
             </div>
             <div id="login_dialog">
                 <p class="error" id="login_error"></p>
                 <p>Name: <input type="text" id="name_input"></input></p>
                 <p>Room: <input type="text" id="room_input"></input></p>
                 <p><button type="button" id="join_button">Join</button></p>
+            </div>
             </div>
         </div>
     </body>
