Further fix players leaving

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
         </div>
         <div id="modal">
             <div id="waiting_dialog" class="hidden">
-                <p class="text-center">Waiting for players...</p>
+                <p id="waiting_message" class="text-center">Waiting for players...</p>
                 <p><image src="img/X.svg" class="XOJ_icon"/> - <span id="waiting_playername_0"></span</p>
                 <p><image src="img/O.svg" class="XOJ_icon"/> - <span id="waiting_playername_1"></span</p>
                 <p><image src="img/J.svg" class="XOJ_icon"/> - <span id="waiting_playername_2"></span</p>
