Stuff I had to do to get it to work on VPS

--- a/public/about.html
+++ b/public/about.html
@@ -2,11 +2,10 @@
 <meta charset="UTF-8"> 
 <html>
 <head>
-        <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-        <title>About Pocket Tactics</title>
+        <title>About Tic Tac Tower</title>
 </head>
 <body>
-    <p>Created in 48 hours for Ludum Dare 32 by <a href="https://straypixels.net/about/"/>this guy</a>.</p>
-    <p>Made using Javascript and JQuery. <a href="https://github.com/chaosed0/ld32/">Check out the code here.</a></p>
+    <p>Created for <a href="http://onegameamonth.com">#1GAM</a> august by <a href="https://straypixels.net/about/"/>this guy</a>.</p>
+    <p>Made using Javascript and JQuery. <a href="https://github.com/chaosed0/1gam_aug/">Check out the code here.</a></p>
 </body>
 </html>
